[tool.poetry]
name = "railib"
version = "0.1"
description = "Package for the Responsible AI & Law Course"
authors = ["Teaching Responsible AI Together Team <contact@responsibly.ai>"]
license = "CC BY-NC 3.0"
packages = [{include="railib"}]
homepage = "https://teach.responsibly.ai"
repository = "https://github.com/ResponsiblyAI/railib"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.9.0"
numpy = "^1.21.6" 
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
matplotlib = "^3.2.2"
seaborn = "^0.11.2"
pycm = "^3.7"
geopy = "^1.17.0"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"