[tool.poetry]
name = "railib"
version = "0.1.1"
description = "Package for the Responsible AI & Law Course"
authors = ["Teaching Responsible AI Together Team <contact@responsibly.ai>"]
license = "CC BY-NC 3.0"
packages = [{include="railib"}]
homepage = "https://teach.responsibly.ai"
repository = "https://github.com/ResponsiblyAI/railib"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = ">=7.9"
numpy = ">=1.26.4,<2.1.0"
pandas = ">=1.3"
scikit-learn = ">=1.0"
matplotlib = ">=3.2"
seaborn = ">=0.11"
pycm = ">=3.7"
geopy = ">=1.17"
folium = ">=0.12"
opencv-python = ">=4.7"
scipy = ">=1.7"
Pillow = ">=9.0,<12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
